# atmo_prova_selecao_analista_middle_office

./: .gitignore  .ruff.toml  DECISIONS.md  Dockerfile  LICENSE  PIPELINE_FLOW.md  Plan.md  README.md  RUNBOOK.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-streamlit.txt  requirements.txt
data/: ana_snapshot.html  reservatorios_metadata.csv
docs/: DOCUMENTATION_STYLE.md  MAPA_MENTAL_PIPELINE.md
scripts/: backfill_principais.ps1  backfill_reservatorios_catalogo.ps1  backfill_reservatorios_periodo_faltante.ps1  update_reservatorios_diario.ps1
src/app/ana/: catalog.py  client.py  parser.py
src/app/analysis/: ana_analysis.py
src/app/api/: main.py
src/app/core/: config.py  enrichment.py  logging_setup.py  parsing.py  pipeline_io.py  reservoir_metadata.py  storage.py  subsystems.py  transforms.py
src/app/dashboard/: streamlit_app.py
src/app/jobs/: extract_job.py  scheduler.py
tests/: test_ana_client.py  test_ana_parser.py  test_api_smoke.py  test_documentation.py  test_enrichment.py  test_extract_job.py  test_extract_job_cli.py  test_parsing.py  test_pipeline_io.py  test_reservoir_catalog_storage.py  test_reservoir_metadata.py  test_scheduler.py  test_storage.py  test_storage_metadata_refresh.py  test_subsystems.py  test_transforms.py
